Fixed header to it covers part of the body

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     width: 100vw;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 70px) .50fr 2fr 1fr 1fr 2fr;
+    grid-template-rows: repeat(2, 70px) .15fr 2fr 1fr 1fr 2fr;
     gap: 20px;
     background-color: rgb(225, 224, 224);;
   }
@@ -86,11 +86,12 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     text-align: center;
-    align-items: center;
+    align-items: end;
   }
   
   .announcements {
     grid-column: 4;
+    text-align: start;
   }
 
   .your-projects,
@@ -104,8 +105,9 @@
     grid-template-columns: 1fr 1fr;
     background-color: rgb(225, 224, 224);
     gap: 20px;
+    padding-bottom: 30px;
   }
-  
+
   .article {
     border-left: 5px solid rgb(247, 182, 19);
     border-radius: 10px;
@@ -121,6 +123,20 @@
     padding: 20px;
     background-color: white;
     border-radius: 10px;
+    width: 260px;
+  }
+
+  .border-line {
+    border-bottom: 1px solid rgb(225, 224, 224);;
+  }
+
+  .up,
+  .up-2 {
+    padding-top: 10px;
+  }VKLJ
+
+  .announcements-section * p {
+    font-size: 14px;
   }
 
   .trending-section {
@@ -128,10 +144,11 @@
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-template-rows: repeat(5, 1fr);
-    text-align: center;
+    text-align: start;
     align-items: center;
     border-radius: 10px;
     background-color: white;
+    width: 300px;
   }
 
   img {
@@ -144,11 +161,23 @@
     color: rgb(0, 0, 0);
   }
 
+  .trending-image {
+    text-align: end;
+  }
+
+  .img-1,
+  .img-2,
+  .img-3,
+  .img-4 {
+    text-align: end;
+    margin-right: 5px;
+  }
+
   .trending-title {
     color: #000000;
     font-size: 20px;
     font-weight: 550;
-    grid-column: 1 / 2;
+    grid-column: 1 / 3;
     align-items: center;
     text-align: center;
   }
@@ -191,6 +220,7 @@
     grid-template-columns: 2fr 1fr;
     background-color: white;
     align-items: center;
+    margin-left: -20px;
   }
 
   input {
@@ -245,14 +275,11 @@
     border-radius: 40px;
     font-size: 20px;
     padding: 5px 20px 5px 20px;
+    margin: 0px 10px 0px 10px;
   }
 
   button:hover {
     background-color: rgba(49, 129, 214, 0.929);
-  }
-
-  .dashboard-icon {
-
   }
 
   .home-icon {
@@ -297,6 +324,6 @@
   }
 
   .icon-section {
-    display: grid;
+    display: flex
     
   }
